GERONIMODEVTOOLS-146 additional vm arguments needed to start 2.0 server.  override getVMArgs, don't persist these args and prepend to user vmargs
git-svn-id: https://svn.apache.org/repos/asf/geronimo/devtools/eclipse-plugin/trunk@540929 13f79535-47bb-0310-9956-ffa450edef68